; ModuleID = '/home/carl/AnghaBench/radare2/libr/flag/extr_flag.c_update_flag_item_offset.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/flag/extr_flag.c_update_flag_item_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64 }
%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_8__*, i64, i32, i32)* @update_flag_item_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_flag_item_offset(i32* %0, %struct.TYPE_8__* %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_7__*, align 8
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %8, align 8
  store i64 %2, i64* %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* %9, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %21, label %18

18:                                               ; preds = %5
  %19 = load i32, i32* %11, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %44

21:                                               ; preds = %18, %5
  %22 = load i32, i32* %10, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %28, label %24

24:                                               ; preds = %21
  %25 = load i32*, i32** %7, align 8
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %27 = call i32 @remove_offsetmap(i32* %25, %struct.TYPE_8__* %26)
  br label %28

28:                                               ; preds = %24, %21
  %29 = load i64, i64* %9, align 8
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  store i64 %29, i64* %31, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = load i64, i64* %9, align 8
  %34 = call %struct.TYPE_7__* @flags_at_offset(i32* %32, i64 %33)
  store %struct.TYPE_7__* %34, %struct.TYPE_7__** %12, align 8
  %35 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %36 = icmp ne %struct.TYPE_7__* %35, null
  br i1 %36, label %38, label %37

37:                                               ; preds = %28
  store i32 0, i32* %6, align 4
  br label %45

38:                                               ; preds = %28
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %12, align 8
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %43 = call i32 @r_list_append(i32 %41, %struct.TYPE_8__* %42)
  store i32 1, i32* %6, align 4
  br label %45

44:                                               ; preds = %18
  store i32 0, i32* %6, align 4
  br label %45

45:                                               ; preds = %44, %38, %37
  %46 = load i32, i32* %6, align 4
  ret i32 %46
}

declare dso_local i32 @remove_offsetmap(i32*, %struct.TYPE_8__*) #1

declare dso_local %struct.TYPE_7__* @flags_at_offset(i32*, i64) #1

declare dso_local i32 @r_list_append(i32, %struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
